src/Elems/AsideElems/StrategyList.css
 /* Checkbox positioning */
.StrategyList {
   position: relative;
   padding-left: 2rem;
}

.StrategyItem {
   padding-left: 1.5rem;

   /* But this is for list item positioning */
   height: 1rem;
   padding-bottom: 0.5rem;
}

.StrategyToggler {
   position: absolute;
   left: -1rem;
}

/* Alternating colors - note that the markers are not in color*/
.StrategyItem:nth-child(odd) {
   background-color: #1f2329;
}

.StrategyItem:nth-child(even) {
   background-color: #31353f;
}

/* Checkbox - disabled list items */
.StrategyItem.disabled {
   color: rgb(170, 170, 170);
}

.StrategyItem.disabled:nth-child(odd) {
   background-color: #282b31;
}

.StrategyItem.disabled:nth-child(even) {
   background-color: #31353c;
}

.StrategyItem.disabled > .StrategyLabel > .StrategyLabelTooltip {
   background-color: rgb(42, 42, 46);
   border: var(--regular-border) solid rgb(177, 156, 130);
}

/* Label structure: Name+Tooltip Status */
.StrategyLabel {
   --my-width: 20em;

   height: 0;
   width: var(--my-width);

   align-content: center;
   text-overflow: ellipsis;

   display: inline-grid;
   grid-template-columns: 3fr 1fr;
   grid-template-areas:
      'name status';
}

.StrategyLabelName {
   grid-area: name;
   text-decoration: underline dotted;
   height: 0;
   width: max-content;
}

.StrategyLabelTooltip {
   visibility: hidden;
   text-decoration: none; /* unneccessary but explicit */

   /* tooltip visuals */
   background-color: rgb(15, 29, 78);
   border: var(--regular-border) solid rgb(190, 158, 120);
   border-radius: 0.5rem;
   padding: 0.5rem;
   text-overflow: ellipsis;

   /* tooltip positioning */
   min-width: 100%;
   width: max-content;
   position: relative;
   bottom: calc(50% - 0.5rem - var(--regular-border));
   margin-left: calc(100% - var(--my-width));
   margin-right: 1rem;
}

.StrategyLabel:hover > .StrategyLabelTooltip,
.StrategyLabel:focus > .StrategyLabelTooltip {
   visibility: visible;
   text-decoration: none;
}

/* z-index */
.StrategyLabelName {
   z-index: 3;
}

.StrategyLabel:hover > .StrategyLabelName,
.StrategyLabel:focus > .StrategyLabelName {
   z-index: 1
}

.StrategyLabel:hover > .StrategyLabelTooltip,
.StrategyLabel:focus > .StrategyLabelTooltip {
   z-index: 2
}

/* Result */
.StrategyResult {
   grid-area: status;
}

.StrategyResult.pass {
   color: green;
}

.StrategyResult.fail {
   color: red;
}

